Foto atau gambar
Ganti nama gambar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 .bg-login-registrasi {
-	background: url("../img/tasnanta depan.png") no-repeat center center fixed;
+	background: url("../img/bg2.png") no-repeat center center fixed;
 	-moz-background-size: cover;
 	-webkit-background-size: cover;
 	-o-background-size: cover;
